BG fix and sizing issue on mobile
Fixed background so that it would properly display image when device
could not open video. Also making an attempt to fix some of the spacing
issues on mobile.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,3 @@
 @media only screen and (max-width : 750px){
-    
+    #portfolio{font-size: 2em;}
 }
